scribble-assertions/src/test/resources/good/extensions/assertions/ComplexMessageFlow.scr
module good.extensions.assertions.ComplexMessageFlow;


type <java> "java.lang.Int" from "rt.jar" as Int;
type <java> "java.lang.Long" from "rt.jar" as Long;


// Check the message flow
global protocol Prot1(role A, role B, role C, role D)
{	
	MSG1(x:Int, y:Int) from A to B;  @(x > 10);
	
	MSG1(x, y) from B to C;
	
	MSG1(z:Int) from C to D;  @(z < x);
}
