scribble-assertions/src/test/resources/bad/extensions/assertions/DbCTemporalSat.scr
module bad.extensions.assertions.DbCTemporalSat;


type <java> "java.lang.Int" from "rt.jar" as Int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// Temporal Satisfiability
global protocol Prot(role A, role B)
{
	//[x<10]
	MSG(x:Int) from A to B;  @(x < 10);

	//[x>y && y>6]
	MSG(y:Int) from B to A;  @((x > y) && (y > 6));
}
